[package]
name = "lindell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
getrandom = {version = "0.2.7", features = ["wasm-bindgen"]}
curv-kzen = {version = "0.9", features = ["num-bigint"], default-features = false}
rand = { version="0.6.5", features = ["wasm-bindgen"] }
zk-paillier = { version = "0.4.3", default-features = false }
console_error_panic_hook = "0.1.6"
sha3 = "0.10"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
sha2 = "0.9"
base64 = "0.13"
aws-sdk-kms = "0.17.0"

actix-web = {version = "4.1.0", optional = true}
sqlx = { version = "0.6.0", features = ["uuid", "runtime-actix-rustls"] }

[dependencies.paillier]
version = "0.4.2"
package = "kzen-paillier"
default-features = false

[dependencies.multi-party-ecdsa]
git = "https://github.com/ZenGo-X/multi-party-ecdsa"
branch = "master"
default-features = false
version = "*"

[features]
default = []
actix_web = ["actix-web"]