[package]
name = "lindell"
version = "0.1.1"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
sha3 = "0.10"
sha2 = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

curv = { package = "curv-kzen", version = "0.9", default-features = false }
zk-paillier = { version = "0.4.3", default-features = false }

[dependencies.paillier]
version = "0.4.2"
package = "kzen-paillier"
default-features = false

[dependencies.multi-party-ecdsa]
git = "https://github.com/ZenGo-X/multi-party-ecdsa"
branch = "master"
default-features = false
version = "*"

[features]
default = ["curv/rust-gmp-kzen"]
num-bigint = ["curv/num-bigint"]
