[package]
name = "tss-eddsa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
multi-party-eddsa = { git = "https://github.com/xcshuan/multi-party-eddsa", rev = "0b838d", default-features = false }
curv = { package = "curv-kzen", version = "0.9", default-features = false }

thiserror = "1"
hex = "0.3.2"
base64 = "0.13"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rand = "0.8"

actix-web = { version = "4.1.0", optional = true }

[dev-dependencies]
ed25519-dalek = "1.0.1"
rand_xoshiro = "0.6.0"
itertools = "0.10"

[features]
default = ["curv/rust-gmp-kzen", "actix_web"]
num-bigint = ["curv/num-bigint"]
actix_web = ["actix-web"]
