[package]
name = "tss-wasm"
version = "0.6.0"
edition = "2018"
license = "GPL-3.0-or-later"
description = "Webassembly bindings to multi-party-ecdsa"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mpc-ecdsa-getrandom-hack = { path = "./getrandom", version = "*" }
getrandom = { version = "0.1.16", features = ["wasm-bindgen"] }
curv-kzen = { version = "0.9", features = [
    "num-bigint",
], default-features = false }
rand = { version = "0.6.5", features = ["wasm-bindgen"] }
zk-paillier = { version = "0.4.3", git = "https://github.com/xcshuan/zk-paillier", default-features = false }
console_error_panic_hook = "0.1.6"
sha3 = "0.10"
serde = { version = "1", features = ["derive"] }
hex = "0.4"
round-based = "0.1"
sha2 = "0.9"

# rand = {version = "0.8.5" }
# getrandom = {version = "0.2", features = ["js"]}
wasm-bindgen = { version = "0.2.83" }
gloo-utils = "0.1.5"
log = "0.4"
wasm-log = "0.3"

tss-eddsa = { path = "../tss-eddsa", features = [
    "num-bigint",
], default-features = false }

[dependencies.paillier]
version = "0.4.2"
git = "https://github.com/xcshuan/rust-paillier"
package = "kzen-paillier"
default-features = false

[dependencies.multi-party-ecdsa]
git = "https://github.com/xcshuan/multi-party-ecdsa"
# git = "https://github.com/tmpfs/multi-party-ecdsa"
# path = "../multi-party-ecdsa"
# branch = "libsecp256k1-dev-dep"
branch = "master"
default-features = false
# rev = "c94065fbf37132dccc7955cf2627866e87c162bf"
version = "*"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
